--- a/client/build.gradle
+++ b/client/build.gradle
@@ -30,4 +30,5 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	testCompile('de.flapdoodle.embed:de.flapdoodle.embed.mongo')
+    testCompile('cz.jirutka.spring:embedmongo-spring:1.3.1')
 }
