--- a/common/build.gradle
+++ b/common/build.gradle
@@ -25,6 +25,12 @@ repositories {
 
 
 dependencies {
-	compile('org.springframework.boot:spring-boot-starter-data-mongodb-reactive')
-	testCompile('org.springframework.boot:spring-boot-starter-test')
+	compile('org.springframework.data:spring-data-mongodb') {
+		exclude module: 'spring-beans'
+		exclude module: 'spring-context'
+		exclude module: 'spring-core'
+		exclude module: 'spring-expression'
+		exclude module: 'spring-tx'
+		exclude module: 'slf4j-api'
+	}
 }
