Moved Mapper and User to common module

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -33,4 +33,5 @@ dependencies {
 		exclude module: 'spring-tx'
 		exclude module: 'slf4j-api'
 	}
+    compile('javax.validation:validation-api:2.0.1.Final')
 }
