--- a/client/build.gradle
+++ b/client/build.gradle
@@ -19,6 +19,11 @@ group = 'io.letitroll'
 version = '1.0.0-SNAPSHOT'
 sourceCompatibility = 1.8
 
+bootJar {
+    baseName = 'io-letitroll-client'
+    version =  '1.0.0'
+}
+
 repositories {
 	mavenCentral()
 }
