--- a/be/pom.xml
+++ b/be/pom.xml
@@ -8,8 +8,8 @@
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>client</name>
-	<description>Let!tRoll Admin - Application for managing feature flags</description>
+	<name>Let!tRoll Admin Backend</name>
+	<description>Application for managing feature flags</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
