--- a/client/pom.xml
+++ b/client/pom.xml
@@ -8,8 +8,8 @@
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>client</name>
-	<description>Let!tRoll Client - Application for serving feature flags</description>
+	<name>Let!tRoll Client Backend</name>
+	<description>Application for serving feature flags to clients</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
