--- a/common/build.gradle
+++ b/common/build.gradle
@@ -26,12 +26,12 @@ repositories {
 
 dependencies {
 	compile('org.springframework.data:spring-data-mongodb') {
-		exclude module: 'spring-beans'
+		/*exclude module: 'spring-beans'
 		exclude module: 'spring-context'
 		exclude module: 'spring-core'
 		exclude module: 'spring-expression'
 		exclude module: 'spring-tx'
-		exclude module: 'slf4j-api'
+		exclude module: 'slf4j-api'*/
 	}
     compile('javax.validation:validation-api:2.0.1.Final')
 }
