--- a/common/pom.xml
+++ b/common/pom.xml
@@ -3,7 +3,8 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-    <name>Let!tRoll Common Sources</name>
+    <name>common</name>
+    <description>Let!tRoll Common Sources</description>
 
 	<artifactId>common</artifactId>
 	<packaging>jar</packaging>
@@ -12,7 +13,7 @@
         <groupId>io.letitroll</groupId>
         <artifactId>parent</artifactId>
         <version>1.0.0-SNAPSHOT</version>
-        <relativePath>../parent</relativePath>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
 	<properties>
