--- a/pom.xml
+++ b/pom.xml
@@ -5,17 +5,15 @@
 
 	<groupId>io.letitroll</groupId>
 	<artifactId>parent</artifactId>
-	<version>${project.version}</version>
+	<version>1.0.0-SNAPSHOT</version>
+    <name>parent</name>
+    <description>Let!tRoll Parent Module</description>
 	<packaging>pom</packaging>
-
-	<name>parent</name>
-	<description>Let!tRoll Parent Module</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.0.0.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
     <modules>
@@ -30,7 +28,6 @@
 		<java.version>1.8</java.version>
         <embedmongo-spring.version>1.3.1</embedmongo-spring.version>
 		<validation-api.version>2.0.1.Final</validation-api.version>
-        <project.version>1.0.0-SNAPSHOT</project.version>
 	</properties>
 
     <dependencyManagement>
