--- a/pom.xml
+++ b/pom.xml
@@ -27,8 +27,8 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
         <embedmongo-spring.version>1.3.1</embedmongo-spring.version>
-		<validation-api.version>2.0.1.Final</validation-api.version>
-	</properties>
+        <mongobee.version>0.13</mongobee.version>
+    </properties>
 
     <dependencyManagement>
         <dependencies>
@@ -36,6 +36,18 @@
                 <groupId>io.letitroll</groupId>
                 <artifactId>common</artifactId>
                 <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.github.mongobee</groupId>
+                <artifactId>mongobee</artifactId>
+                <version>${mongobee.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>cz.jirutka.spring</groupId>
+                <artifactId>embedmongo-spring</artifactId>
+                <version>${embedmongo-spring.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
