Added global Angular config file

--- a/admin/package.json
+++ b/admin/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --prod",
+    "build": "ng build --prod --environment=prod",
+    "aot": "ng build --prod --aot --environment=prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
