--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,34 +1,7 @@
 version: 2
 jobs:
   build_be:
-    working_directory: ~/repo/be
-
-    docker:
-      - image: circleci/openjdk:8-jdk
-
-    environment:
-      MAVEN_OPTS: -Xmx3200m
-
-    steps:
-      - checkout
-
-      # Download and cache dependencies
-      - restore_cache:
-          keys:
-          - v1-dependencies-{{ checksum "pom.xml" }}
-          # fallback to using the latest cache if no exact match is found
-          - v1-dependencies-
-
-      - run: mvn dependency:go-offline
-
-      - save_cache:
-          paths:
-            - ~/.m2
-          key: v1-dependencies-{{ checksum "pom.xml" }}
-
-      - run: mvn clean install
-  build_client:
-    working_directory: ~/repo/client
+    working_directory: ~/repo
 
     docker:
       - image: circleci/openjdk:8-jdk
@@ -84,5 +57,4 @@ workflows:
   pipeline:
     jobs:
       - build_be
-      - build_client
       - build_admin
