--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,6 +29,8 @@ jobs:
     docker:
       - image: circleci/node:7.10
       - image: circleci/python:3.4-browsers
+        environment:
+          CHROME_BIN: "/usr/bin/google-chrome"
 
     working_directory: ~/repo/admin
     steps:
