--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,32 +26,42 @@ jobs:
 
       - run: mvn clean install
   build_admin:
-    docker:
-      - image: circleci/node:7.10
-      - image: circleci/python:3.4-browsers
-
     working_directory: ~/repo/admin
+
+    docker:
+      - image: circleci/node:6-browsers
+
     environment:
       CHROME_BIN: "/usr/bin/google-chrome"
+
     steps:
       - checkout:
           path: ~/repo
-      # Download and cache dependencies
       - restore_cache:
-          keys:
-          - v1-dependencies-{{ checksum "package.json" }}
-          # fallback to using the latest cache if no exact match is found
-          - v1-dependencies-
-
-      - run: yarn install
-
+          key: dependency-cache-{{ checksum "yarn.lock" }}
+      - run:
+          name: install-dependencies
+          command: yarn install
       - save_cache:
+          key: dependency-cache-{{ checksum "yarn.lock" }}
           paths:
-            - node_modules
-          key: v1-dependencies-{{ checksum "package.json" }}
-
-      # run tests!
-      - run: yarn run test-ci
+            - ~/.cache/yarn
+            - ./node_modules
+      - run:
+          name: angular-build
+          command: yarn ng -- build --prod --aot --no-progress
+      - run:
+          name: angular-test
+          command: yarn test -- --single-run --no-progress
+      - store_artifacts:
+          path: test-results.xml
+          prefix: tests
+      - run:
+          name: angular-lint
+          command: yarn lint -- --formatters-dir ./tslint-formatters --format junit -o tslint.xml
+      - store_artifacts:
+          path: tslint.xml
+          prefix: lint
 workflows:
   version: 2
   pipeline:
