--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,7 +50,7 @@ jobs:
       - run:
           name: angular-test
           command: yarn test -- --single-run --no-progress
-      - store_artifacts:
+      - store_test_results:
           path: test-results.xml
           prefix: tests
       - run:
