--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,13 +50,13 @@ jobs:
       - run:
           name: angular-test
           command: yarn test -- --single-run --no-progress
-      - store_test_results:
+      - store_artifacts:
           path: test-results.xml
           prefix: tests
       - run:
           name: angular-e2e
           command: yarn e2e
-      - store_test_results:
+      - store_artifacts:
           path: e2e/junitresults.xml
           prefix: e2e
       - run:
