--- a/pom.xml
+++ b/pom.xml
@@ -28,10 +28,6 @@
 		<java.version>1.8</java.version>
         <embedmongo-spring.version>1.3.1</embedmongo-spring.version>
         <mongobee.version>0.13</mongobee.version>
-        <maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
-        <maven-surefire-plugin.version>2.21.0</maven-surefire-plugin.version>
-        <maven-failsafe-plugin.version>2.21.0</maven-failsafe-plugin.version>
-        <build-helper-maven-plugin.version>1.9.1</build-helper-maven-plugin.version>
     </properties>
 
     <dependencyManagement>
@@ -78,6 +74,9 @@
 
                             <exclude>**/*ApiTest.java</exclude>
                             <exclude>**/*ApiTests.java</exclude>
+
+                            <exclude>**/*ContextTest.java</exclude>
+                            <exclude>**/*ContextTests.java</exclude>
                         </excludes>
                         <forkCount>1</forkCount>
                         <reuseForks>true</reuseForks>
@@ -134,6 +133,10 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>build-helper-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
             </plugin>
         </plugins>
     </build>
