Integration tests seem to work

--- a/client/pom.xml
+++ b/client/pom.xml
@@ -57,6 +57,11 @@
 			<artifactId>embedmongo-spring</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>test</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
