--- a/be/pom.xml
+++ b/be/pom.xml
@@ -65,7 +65,12 @@
 			<artifactId>embedmongo-spring</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>test</artifactId>
+			<scope>test</scope>
+		</dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
