--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,14 +17,12 @@ jobs:
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
 
-      # - run: mvn dependency:go-offline
-
       - save_cache:
           paths:
             - ~/.m2
           key: v1-dependencies-{{ checksum "pom.xml" }}
 
-      - run: mvn clean install
+      - run: mvn clean install -P integration-test
   build_admin:
     working_directory: ~/repo/admin
 
