--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,8 +26,19 @@ jobs:
           name: Clean install
           command: mvn clean install -DskipTests=true
       - run:
-          name: Run Tests
+          name: Run tests
           command: mvn verify -B -P integration-test --fail-at-end
+      - run:
+          name: Save test results
+          command: |
+            mkdir -p ~/junit/
+            find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} ~/junit/ \;
+            find . -type f -regex ".*/target/failsafe-reports/.*xml" -exec cp {} ~/junit/ \;
+          when: always
+      - store_test_results:
+          path: ~/junit
+      - store_artifacts:
+          path: ~/junit
   build_admin:
     working_directory: ~/repo/admin
 
