--- a/admin/package.json
+++ b/admin/package.json
@@ -1,8 +1,11 @@
 {
   "name": "admin",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "license": "MIT",
   "scripts": {
+    "format:check": "prettier --config ./.prettierrc --list-different \"src/{app,environments,assets}/**/*{.ts,.js,.json,.css,.scss}\"",
+    "format:fix": "pretty-quick --staged",
+    "precommit": "run-s format:fix lint",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build --prod --environment=prod",
@@ -51,6 +54,8 @@
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "karma-junit-reporter": "^1.2.0",
+    "prettier": "^1.12.0",
+    "pretty-quick": "^1.4.1",
     "protractor": "~5.1.2",
     "rxjs-tslint-rules": "^3.16.0",
     "ts-node": "~4.1.0",
