--- a/admin/package.json
+++ b/admin/package.json
@@ -6,6 +6,7 @@
     "format:check":
       "prettier --config ./.prettierrc --list-different \"src/{app,environments,assets}/**/*{.ts,.js,.json,.css,.scss}\"",
     "format:fix": "pretty-quick --staged",
+    "format:cli-fix": "pretty-quick",
     "precommit": "run-s format:fix lint",
     "ng": "ng",
     "start": "ng serve",
@@ -34,6 +35,7 @@
     "@ngrx/store": "^5.2.0",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
+    "ngx-clipboard": "^10.0.0",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
