--- a/be/pom.xml
+++ b/be/pom.xml
@@ -43,7 +43,7 @@
 		</dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>common</artifactId>
+            <artifactId>core</artifactId>
         </dependency>
 		<dependency>
 			<groupId>com.github.mongobee</groupId>
