--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,6 +64,11 @@ jobs:
       - run:
           name: angular-test
           command: yarn test -- --single-run --no-progress
+      -run
+          name: Update Chromedriver
+          command: |
+            sudo apt-get update
+            sudo apt-get install google-chrome-stable
       - run:
           name: angular-e2e
           command: yarn e2e
