--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,7 +64,7 @@ jobs:
       - run:
           name: angular-test
           command: yarn test -- --single-run --no-progress
-      -run
+      - run:
           name: Update Chromedriver
           command: |
             sudo apt-get update
