--- a/admin/package.json
+++ b/admin/package.json
@@ -35,6 +35,7 @@
     "@ngrx/store": "^5.2.0",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
+    "ngrx-actions": "^3.1.6",
     "ngx-clipboard": "^10.0.0",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
