--- a/admin/package.json
+++ b/admin/package.json
@@ -58,6 +58,7 @@
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "karma-junit-reporter": "^1.2.0",
+    "ngrx-store-freeze": "^0.2.2",
     "prettier": "^1.12.0",
     "pretty-quick": "^1.4.1",
     "protractor": "~5.1.2",
